--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,6 @@ h1, h2, h3, h4, h5, p {
 	bottom: 55%;
 	width: 100%;
 	text-align: center;
-	z-index: 2;
 	.welcome-message {
 		color: #3A3A3A;
 		font-weight: 400;
@@ -44,6 +43,7 @@ h1, h2, h3, h4, h5, p {
 		bottom: 0;
 		position: absolute;
 		width: 100%;
+		z-index: -1;
 	}
 
 	.foreground-items-container {
